feat: add registration
